--- a/src/Assets/detailbook.css
+++ b/src/Assets/detailbook.css
@@ -49,7 +49,7 @@
     width: 20%;
     border-radius: 10px;
     box-shadow: 0px 0px 4px black;
-    right: -250px;
+    right: -300px;
   }
   
   .back {
@@ -59,5 +59,21 @@
   }
   .buttonDel{
       margin-top: 5px;
+  }
+
+  .buttonB{
+  background-color: #88f45d;
+	border: none;
+	color: black;
+	border-radius: 8px;
+	height: 38px;
+	width: 150px;
+  font-size: 15px;
+  font-weight: bold;
+	outline: none;
+	cursor: pointer;
+  float: right;
+  margin-right: -390px;
+  margin-top: 150px;
   }
   
