--- a/src/Assets/listbook.css
+++ b/src/Assets/listbook.css
@@ -4,7 +4,7 @@
   
   .add {
     padding: 12px 30px;
-    background-color: #f4cf5d;
+    background-color: rgb(20, 22, 129);
     border: 0;
     border-radius: 8px;
     cursor: pointer;
@@ -18,7 +18,7 @@
   }
   
   .add:active {
-    background-color: #c79e21;
+    background-color: rgb(20, 22, 129)
   }
   
   .list-item {
@@ -35,8 +35,8 @@
   
   .item {
     width: 200px;
-    height: 270px;
-    box-shadow: 0px 0px 10px #aaa;
+    height: 300px;
+    box-shadow: 0px 0px 10px rgb(2, 3, 59);
     border-radius: 10px;
     float: left;
     margin: 5px 20px;
@@ -44,6 +44,7 @@
     outline: none;
     margin-bottom: 50px;
     box-sizing: border-box;
+    background-color: rgb(20, 22, 129)
   }
   
   .item img {
@@ -65,6 +66,6 @@
     margin: 0;
     width: 100%;
     font-size: 15pt;
-    color: black
+    color: white
   }
   
