--- a/src/Assets/navbar.css
+++ b/src/Assets/navbar.css
@@ -4,16 +4,12 @@
     height: 80px;
     left: 0px;
     top: 0px;
-    background-color: #ffffff;
-    box-shadow: 0px 5px 20px rgb(12, 4, 4);
+    background-color: rgb(20, 22, 129);
+    box-shadow: 0px 5px 20px rgb(2, 3, 59);
 };
 
 .title {
-    position: relative;
-    margin-left: 700px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    margin-top: 100px;
-    color: #000000;
+    padding:0px 0px 0px 200px;
+    font-size: 20pt;
+    color: white;
 }
