--- a/src/Assets/search.css
+++ b/src/Assets/search.css
@@ -1,11 +1,11 @@
 .search{
     border-radius: 40px;
-    height: 40px;
+    height: 70px;
     width: 75%;
     text-indent: 35px;
     border-color: transparent;
-    box-shadow: 0px 1px 5px rgb(170, 170, 170);    
-    color : rgb(148, 148, 148);
+    box-shadow: 0px 1px 5px rgb(2, 3, 59);    
+    color : black;
     margin-top: 150px;
     position: relative;
 }
